k8s/user-profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-profile
  template:
    metadata:
      labels:
        app: user-profile
    spec:
      containers:
      - name: user-profile
        image: stoufaa/user-profile:latest
        ports:
        - containerPort: 5004
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-profile
spec:
  selector:
    app: user-profile
  ports:
  - port: 5004
    targetPort: 5004
  type: ClusterIP
